  the buffer number for a given buffer will not change until the 
  session ends or the buffer is removed from history.
* Added --repeat to \go, so that a query can be executed multiple times.
  During this execution the variable ${iteration} can be referred to
  within the query to determine which iteration of the repeat cycle
  the query is on (starting from 0).
* Added ${scale} and changed the definition of ${precision}. These
  two values now work together when displaying floating point
  values exactly as one would expect them to.
* Added ${querytime} configuration property to suppress display of
  query timing information. 
* Added dist-sparc-sol build target. This provides a .tar.gz file
  that contains jsqsh and its JNI files. Currently this relies upon
  the build platform having readline-5.x installed
* Added support for SQLXML datatype
* Enabled support for "N" types, NVARCHAR(), NCHAR(), etc. 
* Fixed recognition of Oracle NUMBER type when it is not qualified with
  a specific precision and scale.
* Fixed case where stored procedures with multiple result sets would
  occasionally not show all of the available result sets. Unfortunately,
  this problem still persists in the SQL Server 2005 driver, but I think
  its a bug in the driver.
* Fixed persistence of the SID attribute of a connection to the 
  connections.xml file. 
* Fixed NullPointerException when maxrows_method=driver 
* Fixed $user not being set when the username is provided at the 
  "Username:" prompt rather than on the command line.

Release 1.2
* Added new mechanism to \connect to allow a logical name to be assigned
  to a connection and persistently saved away so that the connection
  can be re-established in the future using only the name. This provides
  a cleaner mechanism for managing connections than the 'alias' command.
  Run  "\help connect" for more details.
* Added session-to-session redirection, allowing the output of a 